nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-flaskenvvar
  labels:
    run: svc-flaskenvvar
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskenvvar
  type: ClusterIP
